--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon backend/server.js",
-    "start": "node backend/server.js",
-    "vercel-build": "npm install"
+    "start": "node backend/server.js"
   },
   "keywords": [],
   "author": "codesmosh",
