--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,15 @@
 {
-    "version": 2,
-    "builds": [
+  "version": 2,
+  "builds": [
       {
-        "src": "src/server.js",
-        "use": "@vercel/node"
+          "src": "*.js",
+          "use": "@vercel/node"
       }
-    ],
-    "routes": [
-      { "src": "/api/(.*)", "dest": "src/server.js" }
-    ]
-  }
+  ],
+  "routes": [
+      {
+          "src": "/(.*)",
+          "dest": "/"
+      }
+  ]
+}
