--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.2",
     "cloudinary": "^1.41.3",
     "dotenv": "^16.4.5",
+    "dotenv-expand": "^8.0.0",
     "framer-motion": "^11.2.11",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
@@ -24,9 +25,11 @@
     "react-dom": "^18.3.1",
     "react-lottie": "^1.2.4",
     "react-notifications": "^1.7.4",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.24.1",
+    "react-scripts": "^5.0.1",
     "react-scrollable-feed": "^2.0.2",
     "socket.io-client": "^4.7.5",
+    "source-map": "^0.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -52,8 +55,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-router-dom": "^6.24.1"
   }
 }
