--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.41.3",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "dotenv-expand": "^8.0.0",
     "framer-motion": "^11.2.11",
