--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "dotenv-expand": "^8.0.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.2.11",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
